--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,35 @@
-<!DOCTYPE html>
-<html>
+{% extends 'layout.html' %}
 
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>My First Dashboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-</head>
-
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-3">
-                <label> Choose the plot type....</label>
-                <select class="form-control" id='first_cat'>
-                    <option value="Bar">Bar</option>
-                    <option value="Scatter">Scatter</option>
-                </select>
-            </div>
-            <div class="col-md-6">
-                <div class="chart" id="bargraph">
-                    <script>
-                        var graphs = {{ plot | safe}};
-                        Plotly.plot('bargraph', graphs, {});
-                    </script>
-                </div>
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+            <label> Choose the plot type....</label>
+            <select class="form-control" id='first_cat'>
+                <option value="Bar">Bar</option>
+                <option value="Scatter">Scatter</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="chart" id="bargraph">
+                <script>
+                    var graphs = {{ plot | safe}};
+                    Plotly.plot('bargraph', graphs, {});
+                </script>
             </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/jquery-1.11.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/plots.js') }}"></script>
-</body>
-
-</html>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="chart" id="bargraph2">
+                <script>
+                    var graphs2 = {{ plot | safe}};
+                    Plotly.plot('bargraph2', graphs2, {});
+                </script>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
