--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html>
+{% extends 'layout.html' %}
 
-<head>
-  <title>Flask Intro</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <div class="container">
-    <h1>Welcome to Flask!</h1>
-    <br>
-    <p>Click <a href="/">here</a> to go home.</p>
-  </div>
-</body>
-
-</html>
+{% block body %}
+<div class="container">
+  <h1>Welcome to Flask!</h1>
+  <br>
+  <p>Click <a href="/">here</a> to go home.</p>
+</div>
+{% endblock %}
