--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,10 +3,12 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <title>My First Dashboard</title>
+    <title>Coconut Barometer - KK6GPV - Adam Reeder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
@@ -15,16 +17,55 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                class="d-inline-block align-top" alt="">
-            Bootstrap
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/#">
+            <img id="logo" alt="logo" src="static/images/icon_transparent.png" width="45" height="45">
+            Coconut Barometer
         </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Weather
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/awc">Aviation Weather</a>
+                        <a class="dropdown-item" href="/wx">Station Weather</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/iot">IOT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/aprs">APRS</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Flying
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/aircraft">Aircraft</a>
+                        <a class="dropdown-item" href="/paragliding">Paragliding</a>
+                        <a class="dropdown-item" href="/soaring">Soaring</a>
+                        <a class="dropdown-item" href="/n5777v">N5777V</a>
+                    </div>
+                </li>
+                <li class="nav-item"></li>
+                <a class="nav-link" href="/welcome">Welcome</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/test">Test</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     {% block body %}{% endblock %}
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/plots.js') }}"></script>
 </body>
 
