--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,6 +56,21 @@
                         <a class="dropdown-item" href="/n5777v">N5777V</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Photos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/galleries">Galleries</a>
+                        <a class="dropdown-item" href="/travel">Travel</a>
+                        <a class="dropdown-item" href="/scuba">Scuba</a>
+                        <a class="dropdown-item" href="/fishing">Fishing</a>
+                    </div>
+                </li>
+                <li class="nav-item"></li>
+                <a class="nav-link" href="/oilgas">Oil & Gas</a>
+                </li>
                 <li class="nav-item"></li>
                 <a class="nav-link" href="/welcome">Welcome</a>
                 </li>
