edits to pages, remove jquery, add pages to app.py

--- a/templates/scuba.html
+++ b/templates/scuba.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-  <h1>Welcome to Flask!</h1>
+  <h1>Scuba</h1>
   <br>
   <p>Click <a href="/">here</a> to go home.</p>
 </div>
