--- a/templates/oilgas.html
+++ b/templates/oilgas.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-  <h1>Welcome to Flask!</h1>
+  <h1>Oil & Gas</h1>
   <br>
   <p>Click <a href="/">here</a> to go home.</p>
 </div>
