--- a/templates/iot.html
+++ b/templates/iot.html
@@ -6,4 +6,43 @@
   <br>
   <p>Click <a href="/">here</a> to go home.</p>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <label>Sensor</label>
+      <select class="form-control" id='sensor_iot'>
+        <option value="sensor.load_1m">sensor.load_1m</option>
+        <option value="sensor.load_5m">sensor.load_5m</option>
+        <option value="sensor.load_15m">sensor.load_15m</option>
+        <option value="sensor.plug_01_voltage">sensor.plug_01_voltage</option>
+        <option value="sensor.plug_02_voltage">sensor.plug_02_voltage</option>
+        <option value="sensor.plug_03_voltage">sensor.plug_03_voltage</option>
+        <option value="sensor.floor2_temperature">sensor.floor2_temperature</option>
+        <option value="sensor.floor2_humidity">sensor.floor2_humidity</option>
+        <option value="sensor.mobile_temperature">sensor.mobile_temperature</option>
+        <option value="sensor.mobile_humidity">sensor.mobile_humidity</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <label>Time</label>
+      <select class="form-control" id='time_iot'>
+        <option value="t_100">100</option>
+        <option value="t_500">500</option>
+        <option value="t_1000">1000</option>
+        <option value="t_5000">5000</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="chart" id="graph_iot">
+        <script>
+          var graphs = {{ plot | safe}};
+          Plotly.plot('graph_iot', graphs, {});
+        </script>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="{{ url_for('static', filename='js/iot.js') }}"></script>
 {% endblock %}
