--- a/templates/aprs.html
+++ b/templates/aprs.html
@@ -6,7 +6,7 @@
     <br>
     <p>Click <a href="/">here</a> to go home.</p>
 </div>
-<div class="container">
+<div class="container" id="aprs">
     <div class="row">
         <div class="col-md-4">
             <label>Type</label>
@@ -50,5 +50,4 @@
     <div id="log-event"></div>
     <div id="log-layout"></div>
 </div>
-<script src="{{ url_for('static', filename='js/aprs.js') }}"></script>
 {% endblock %}
