--- a/templates/iot.html
+++ b/templates/iot.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
+<div class="container" id="iot">
   <h1>IoT</h1>
   <br>
   <p>Click <a href="/">here</a> to go home.</p>
@@ -44,5 +44,4 @@
     </div>
   </div>
 </div>
-<script src="{{ url_for('static', filename='js/iot.js') }}"></script>
 {% endblock %}
