--- a/templates/layout.html
+++ b/templates/layout.html
@@ -78,6 +78,7 @@
         </div>
     </nav>
     {% block body %}{% endblock %}
+    <script src="{{ url_for('static', filename='js/plots.js') }}"></script>
 </body>
 
 </html>
