clean up html, update bones of n5777v.html

--- a/templates/n5777v.html
+++ b/templates/n5777v.html
@@ -1,130 +1,79 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="aircraft">
+<div class="container" id="n5777v">
   <h1>N5777V</h1>
   <br>
   <p>Click <a href="/">here</a> to go home.</p>
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/first_solo.jpg" alt="First solo" width="100%"></p>
-      <p align=center>First solo</p>
+    <div class="col-md-6">
+      <p align=center><img border=0 width="50%"
+          src="https://farm3.staticflickr.com/2201/32216824984_5f81a3f854_z_d.jpg"><img border=0 width="50%"
+          src="https://farm4.staticflickr.com/3934/32247039723_296a17b91a_z_d.jpg"></p>
+      <p align=center><img border=0 width="50%"
+          src="https://farm1.staticflickr.com/563/32520704794_6097b29824_z_d.jpg"><img border=0 width="50%"
+          src="https://farm4.staticflickr.com/3672/33323298756_51f9739c4d_z_d.jpg"></p>
     </div>
-    <div class="col-md-9">
-      <p>After a lifetime of interest in aviation, I started flying in 2011 after moving to Bakersfield.</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/kernville.jpg" alt="Departing Kernville" width="100%"></p>
-      <p align=center>Departing Kernville</p>
-    </div>
-    <div class="col-md-9">
-      <p>Southern California's great flying weather, many fantastic destinations from the coast, central valley, high
-        desert, and mountains, and the close-knit aviation community have made it a great hobby for the last few years.
-      </p>
+    <div class="col-md-6">
+      <p>In early 2017 a buddy and I bought N5777V, a 1966 Beechcraft Musketeer Super III. It has a 200hp IO-360 and
+        nearly 1000# useful load, and does 120kts at around 9gph. Our requirements were 4 seats, and the ability to
+        carry 4 normal humans with full fuel. Many 4 seat aircraft you must take less fuel to actually carry 4
+        passengers. We had been looking mainly at Piper Cherokees and preferred low-wings, so when the fixed-pitch,
+        fixed-gear, priced-right Super Mouse showed up nearby we went to give it a look over.</p>
+      <p>Photos from the first trip to see N5777V and the pre-buy done during the annual</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/private_pilot.jpg" alt="Newly minted private pilot" width="100%"></p>
-      <p align=center>Newly minted private pilot</p>
+    <div class="col-md-6">
+      <p align=center><img border=0 width="50%"
+          src="https://farm5.staticflickr.com/4305/36143564716_a69a6756c7_z_d.jpg"><img border=0 width="50%"
+          src="https://farm5.staticflickr.com/4327/35794047620_e3278d8c2d_z_d.jpg"></p>
     </div>
-    <div class="col-md-9">
-      <p>The majority of my training has been at Meadows Field (BFL), with some at Mojave Air and Space Port (MHV),
-        Tehachapi Municipal (TSP), and Shafter Municipal (EHF).</p>
-
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/extra_300.jpg" alt="Aerobatics in an Extra 300" width="100%"></p>
-      <p align=center>Aerobatics in an Extra 300</p>
-
-    </div>
-    <div class="col-md-9">
-      <p>Most of my times is in Cessna 172s with time in a Super Decathlon, RV-6A, and Extra 300L.</p>
-
+    <div class="col-md-6">
+      <p>After arriving in Bakersfield, it was already time to give it a bath at the wash rack</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/super_decathlon.jpg" alt="Completed tailwheel and aerobatics training at KMIT" width="100%">
-      </p>
-      <p align=center>Completed tailwheel and aerobatics training at KMIT</p>
+    <div class="col-md-6">
+      <p align=center><img border=0 width="50%"
+          src="https://farm3.staticflickr.com/2871/33377872160_ab8c8d2aa2_z_d.jpg"><img border=0 width="50%"
+          src="https://farm5.staticflickr.com/4172/34504081016_3d74971c32_z_d.jpg"></p>
     </div>
-    <div class="col-md-9">
-      <p>My favorite flying experiences are checking out airport diners with friends, practicing aerobatics, and
-        attending airshows.</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-      <p><img src="static/images/catalina.jpg" alt="On the ramp at KAVX, Catalina Island" width="100%"></p>
-      <p align=center>On the ramp at KAVX, Catalina Island</p>
-
-    </div>
-    <div class="col-md-8">
-      <p>One highlight was a visit to Edwards AFB in the Mojave Desert and the NASA Armstrong Flight Research Center.
-      </p>
-
+    <div class="col-md-6">
+      <p>An hour or so of transition training was all it took to get accustomed enough to the new bird. 50 hours later
+        I'm still learning new quirks of the plane</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4">
-      <p><img src="static/images/mooney.jpg" alt="Mooney M-20K with turboed TSIO-360 and GAMIs" width="100%"></p>
-      <p align=center>Mooney M-20K with turboed TSIO-360 and GAMIs</p>
-
+    <div class="col-md-6">
+      <p align=center><img border=0 width="50%"
+          src="https://farm5.staticflickr.com/4357/36472591390_28342818da_z_d.jpg"><img border=0 width="50%"
+          src="https://farm5.staticflickr.com/4429/36732049786_4faf78d779_z_d.jpg"></p>
     </div>
-    <div class="col-md-8">
-      <p>My main interests are in race/performance modifications, aircraft engines, aerobatics, and experimental
-        aircraft.</p>
-
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/tehachapi.jpg" alt="Inbound to KBFL from KWJF" width="100%"></p>
-      <p align=center>Inbound to KBFL from KWJF</p>
-
-    </div>
-    <div class="col-md-9">
-      <p>Reno race fan. AOPA and EAA member. Military aviation buff. Tailwheel certified. Upset prevention &amp;
-        recovery and spin trained.</p>
-
+    <div class="col-md-6">
+      <p>Later in 2017 the plane was borrowed for use in a Netflix movie, and some aerial filming was done from a
+        helicopter. No idea when the movie will be realeased though</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/salinas.jpg" alt="AOPA Salinas fly-in" width="100%"></p>
-      <p align=center>AOPA Salinas fly-in</p>
-
+    <div class="col-md-6">
+      <p align=center><img border=0 width="50%"
+          src="https://farm3.staticflickr.com/2847/33389085140_696c036099_z_d.jpg"><img border=0 width="50%"
+          src="https://farm3.staticflickr.com/2858/34222394245_f5c501739d_z_d.jpg"></p>
     </div>
-    <div class="col-md-9">
-      <p>I am currently working towards a commercial / instructor certificate, and eventually plan to instruct on the
-        side.</p>
-
+    <div class="col-md-6">
+      <p>At home on the ramp of Epic Jet Center, KBFL</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
-      <p><img src="static/images/n5777v_mit1.jpg" alt="N5777V on low approach, KMIT" width="100%"></p>
-      <p align=center>N5777V on low approach, KMIT</p>
-
+    <div class="col-md-6">
+      <p align=center><img border=0 width="50%" src="static/images/n5777v_mit1.jpg"><img border=0 width="50%"
+          src="static/images/n5777v_mit2.jpg"></p>
     </div>
-    <div class="col-md-9">
-      <p>In March of 2017 I co-purchased my first aircraft: Beechcraft A23-24 Super Musketeer N5777V, which is detailed
-        on its own page.</p>
-
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <p align=center><iframe src="https://player.vimeo.com/video/163972650" width="560" height="349" frameborder="0"
-          allowfullscreen="allowfullscreen"></iframe></p>
-
+    <div class="col-md-6">
+      <p>Flybys at KMIT (Shafter, CA) on a nice pink sunset day</p>
     </div>
   </div>
 </div>
