--- a/templates/aircraft.html
+++ b/templates/aircraft.html
@@ -35,23 +35,21 @@
     <div class="col-md-9">
       <p>The majority of my training has been at Meadows Field (BFL), with some at Mojave Air and Space Port (MHV),
         Tehachapi Municipal (TSP), and Shafter Municipal (EHF).</p>
-
     </div>
   </div>
   <div class="row">
     <div class="col-md-3">
       <p><img src="static/images/extra_300.jpg" alt="Aerobatics in an Extra 300" width="100%"></p>
       <p align=center>Aerobatics in an Extra 300</p>
-
     </div>
     <div class="col-md-9">
       <p>Most of my times is in Cessna 172s with time in a Super Decathlon, RV-6A, and Extra 300L.</p>
-
     </div>
   </div>
   <div class="row">
     <div class="col-md-3">
-      <p><img src="static/images/super_decathlon.jpg" alt="Completed tailwheel and aerobatics training at KMIT" width="100%">
+      <p><img src="static/images/super_decathlon.jpg" alt="Completed tailwheel and aerobatics training at KMIT"
+          width="100%">
       </p>
       <p align=center>Completed tailwheel and aerobatics training at KMIT</p>
     </div>
@@ -64,12 +62,10 @@
     <div class="col-md-4">
       <p><img src="static/images/catalina.jpg" alt="On the ramp at KAVX, Catalina Island" width="100%"></p>
       <p align=center>On the ramp at KAVX, Catalina Island</p>
-
     </div>
     <div class="col-md-8">
       <p>One highlight was a visit to Edwards AFB in the Mojave Desert and the NASA Armstrong Flight Research Center.
       </p>
-
     </div>
   </div>
   <div class="row">
