formatting edits to n5777v.html

--- a/templates/n5777v.html
+++ b/templates/n5777v.html
@@ -8,12 +8,12 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <p align=center><img border=0 width="50%"
-          src="https://farm3.staticflickr.com/2201/32216824984_5f81a3f854_z_d.jpg"><img border=0 width="50%"
-          src="https://farm4.staticflickr.com/3934/32247039723_296a17b91a_z_d.jpg"></p>
-      <p align=center><img border=0 width="50%"
-          src="https://farm1.staticflickr.com/563/32520704794_6097b29824_z_d.jpg"><img border=0 width="50%"
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm3.staticflickr.com/2201/32216824984_5f81a3f854_z_d.jpg"></p>
+    </div>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
           src="https://farm4.staticflickr.com/3672/33323298756_51f9739c4d_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
@@ -26,9 +26,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
-      <p align=center><img border=0 width="50%"
-          src="https://farm5.staticflickr.com/4305/36143564716_a69a6756c7_z_d.jpg"><img border=0 width="50%"
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm5.staticflickr.com/4305/36143564716_a69a6756c7_z_d.jpg"></p>
+    </div>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
           src="https://farm5.staticflickr.com/4327/35794047620_e3278d8c2d_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
@@ -36,9 +39,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
-      <p align=center><img border=0 width="50%"
-          src="https://farm3.staticflickr.com/2871/33377872160_ab8c8d2aa2_z_d.jpg"><img border=0 width="50%"
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm3.staticflickr.com/2871/33377872160_ab8c8d2aa2_z_d.jpg"></p>
+    </div>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
           src="https://farm5.staticflickr.com/4172/34504081016_3d74971c32_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
@@ -47,9 +53,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
-      <p align=center><img border=0 width="50%"
-          src="https://farm5.staticflickr.com/4357/36472591390_28342818da_z_d.jpg"><img border=0 width="50%"
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm5.staticflickr.com/4357/36472591390_28342818da_z_d.jpg"></p>
+    </div>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
           src="https://farm5.staticflickr.com/4429/36732049786_4faf78d779_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
@@ -58,9 +67,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
-      <p align=center><img border=0 width="50%"
-          src="https://farm3.staticflickr.com/2847/33389085140_696c036099_z_d.jpg"><img border=0 width="50%"
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm3.staticflickr.com/2847/33389085140_696c036099_z_d.jpg"></p>
+    </div>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
           src="https://farm3.staticflickr.com/2858/34222394245_f5c501739d_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
@@ -68,9 +80,13 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
-      <p align=center><img border=0 width="50%" src="static/images/n5777v_mit1.jpg"><img border=0 width="50%"
-          src="static/images/n5777v_mit2.jpg"></p>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm5.staticflickr.com/4305/36143564716_a69a6756c7_z_d.jpg"></p>
+    </div>
+    <div class="col-md-3">
+      <p align=center><img border=0 width="100%"
+          src="https://farm5.staticflickr.com/4327/35794047620_e3278d8c2d_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
       <p>Flybys at KMIT (Shafter, CA) on a nice pink sunset day</p>
