--- a/templates/n5777v.html
+++ b/templates/n5777v.html
@@ -48,7 +48,7 @@
           src="https://farm5.staticflickr.com/4172/34504081016_3d74971c32_z_d.jpg"></p>
     </div>
     <div class="col-md-6">
-      <p>An hour or so of transition training was all it took to get accustomed enough to the new bird. 50 hours later
+      <p>An hour or so of transition training was all it took to get accustomed enough to the new bird. Many hours later
         I'm still learning new quirks of the plane</p>
     </div>
   </div>
