--- a/templates/soaring.html
+++ b/templates/soaring.html
@@ -1,9 +1,61 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
+<div class="container" id="soaring">
   <h1>Soaring</h1>
   <br>
   <p>Click <a href="/">here</a> to go home.</p>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <p><img src="static/images/soaring_tsp2.jpg" alt="Soaring in the Tehachapi convergence" width="100%"></p>
+      <p align=center>Soaring in the Tehachapi convergence</p>
+    </div>
+    <div class="col-md-9">
+      <p>Soaring is probably the most exciting form of flight. Instead of avoiding the sometimes extreme vertical
+        movements of the atmosphere, soaring is about understanding them and harnessing their power. Incredible,
+        hard-to-imagine feats are possible in gliders and the nearby Eastern Sierras are world-renown for their soar
+        ability.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <p><img src="static/images/sierra_wave2.jpg" alt="Sierra Mountain Wave, visible due to moisture" width="100%"></p>
+      <p align=center>Sierra Mountain Wave, visible due to moisture</p>
+    </div>
+    <div class="col-md-9">
+      <p>There are 4 main forms of lift in soaring: ridge lift where air is forced up by a slope (common form for <a
+          href="/paragliding">paragliders</a>), convergence where air masses meet
+        (often terrain induced), thermals where blooms of air rise due to heat, and wave lift produced by downstream
+        waves from disturbance by mountains (think of ripples downstream of rocks in a river). The Eastern Sierras are
+        notorious for their mountain wave conditions. While transiting powered aircraft are often hit by intense
+        turbulence, glider pilots seek out the upward moving air on the front edge of the wave to climb to spectacular
+        airliner altitudes, all without an engine.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <p><img src="static/images/soaring_tsp1.jpg" alt="On ramp at L94" width="100%"></p>
+      <p align=center>On ramp at L94</p>
+    </div>
+    <div class="col-md-9">
+      <p>Just 45 minutes from Bakersfield, Tehachapi is known for <a href="http://skylarknorth.com/index.html"
+          target="_blank">Skylark North</a> at <a href="https://en.wikipedia.org/wiki/Mountain_Valley_Airport"
+          target="_blank">Mountain Valley Airport</a> (L94) and the fantastic flights it produces. Air from the Sierra
+        Nevadas, Tehachapis, and Mojave Desert converge to form the Tehachapi convergence line, visible with enough
+        moisture. Just an interesting fact but nearly all NASA Space Shuttle pilots who came from the Air Force have
+        received glider training at Mountain Valley Airport due to instruction they would have received with in Test
+        Pilot School.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <p align=center>
+        <iframe src="https://www.youtube.com/embed/videoseries?list=PLZyZHBimaX8dI3KpzEu23irtrCmC04RLK&amp;showinfo=0"
+          width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p>
+      <p align=center>Mountain Valley Airport</p>
+    </div>
+  </div>
 </div>
 {% endblock %}
