--- a/templates/n5777v.html
+++ b/templates/n5777v.html
@@ -82,11 +82,11 @@
   <div class="row">
     <div class="col-md-3">
       <p align=center><img border=0 width="100%"
-          src="https://farm5.staticflickr.com/4305/36143564716_a69a6756c7_z_d.jpg"></p>
+          src="static/images/n5777v_mit1.jpg"></p>
     </div>
     <div class="col-md-3">
       <p align=center><img border=0 width="100%"
-          src="https://farm5.staticflickr.com/4327/35794047620_e3278d8c2d_z_d.jpg"></p>
+          src="static/images/n5777v_mit2.jpg"></p>
     </div>
     <div class="col-md-6">
       <p>Flybys at KMIT (Shafter, CA) on a nice pink sunset day</p>
