update embed responsive

--- a/templates/paragliding.html
+++ b/templates/paragliding.html
@@ -24,20 +24,25 @@
   </div>
   <div class="row">
     <div class="col-md-5">
-      <p align=center><img src="static/images/comanche_track.jpg" alt="GPS track of typical Comanche Peak sled run" width="100%"></p>
+      <p align=center><img src="static/images/comanche_track.jpg" alt="GPS track of typical Comanche Peak sled run"
+          width="100%"></p>
       <p align=center>GPS track of typical Comanche Peak sled run</p>
     </div>
     <div class="col-md-7">
-      <p>Also near town is Comanche Peak, southeast of Arvin, CA. Launch at 2800ft is about 700ft over LZ, and sled rides are common with thermals out over the flat spots. Caution must be paid to a barbed-wire fences near the LZ and alongside the road.</p>
+      <p>Also near town is Comanche Peak, southeast of Arvin, CA. Launch at 2800ft is about 700ft over LZ, and sled
+        rides are common with thermals out over the flat spots. Caution must be paid to a barbed-wire fences near the LZ
+        and alongside the road.</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-5">
-      <p align=center><img src="static/images/sand_city.jpg" alt="Me flying at Sand City near Monterey, CA" width="100%"></p>
+      <p align=center><img src="static/images/sand_city.jpg" alt="Me flying at Sand City near Monterey, CA"
+          width="100%"></p>
       <p align=center>Me flying at Sand City near Monterey, CA</p>
     </div>
     <div class="col-md-7">
-        <p>Great sites within a few hours include Dunlap, Santa Barbara (Elings Park and Coal Oil Pt), Marshall, Sand City, and Torrey Pines.</p>
+      <p>Great sites within a few hours include Dunlap, Santa Barbara (Elings Park and Coal Oil Pt), Marshall, Sand
+        City, and Torrey Pines.</p>
     </div>
   </div>
   <div class="row">
@@ -94,17 +99,23 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
-      <p align=center><iframe width="560" height="315"
-          src="https://www.youtube.com/embed/lod9Xuo2zxw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
-          allowfullscreen></iframe></p>
+    <div class="col-md-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lod9Xuo2zxw?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p>Video of paragliding at Ant Hill, Bakersfield</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
-      <p align=center><iframe width="560" height="315"
-          src="https://www.youtube.com/embed/VD-7Tkmp7JU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
-          allowfullscreen></iframe></p>
+    <div class="col-md-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VD-7Tkmp7JU?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p>Video of paragliding at Ant Hill, Bakersfield</p>
     </div>
   </div>
 </div>
