--- a/templates/aircraft.html
+++ b/templates/aircraft.html
@@ -109,9 +109,13 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
-      <p align=center><iframe src="https://player.vimeo.com/video/163972650" width="560" height="349" frameborder="0"
-          allowfullscreen="allowfullscreen"></iframe></p>
+    <div class="col-md-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163972650" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p>Video of aerobatic flying in a Super Decathlon</p>
     </div>
   </div>
 </div>
