--- a/templates/soaring.html
+++ b/templates/soaring.html
@@ -50,11 +50,15 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
-      <p align=center>
-        <iframe src="https://www.youtube.com/embed/videoseries?list=PLZyZHBimaX8dI3KpzEu23irtrCmC04RLK&amp;showinfo=0"
-          width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p>
-      <p align=center>Mountain Valley Airport</p>
+    <div class="col-md-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item"
+          src="https://www.youtube.com/embed/videoseries?list=PLZyZHBimaX8dI3KpzEu23irtrCmC04RLK&amp;showinfo=0"
+          allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p>Video of soaring at Mountain Valley Airport, Tehachapi, CA</p>
     </div>
   </div>
 </div>
