clean up, move to helper folder

--- a/templates/n5777v.html
+++ b/templates/n5777v.html
@@ -81,12 +81,10 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <p align=center><img border=0 width="100%"
-          src="static/images/n5777v_mit1.jpg"></p>
+      <p align=center><img border=0 width="100%" src="static/images/n5777v_mit1.jpg"></p>
     </div>
     <div class="col-md-3">
-      <p align=center><img border=0 width="100%"
-          src="static/images/n5777v_mit2.jpg"></p>
+      <p align=center><img border=0 width="100%" src="static/images/n5777v_mit2.jpg"></p>
     </div>
     <div class="col-md-6">
       <p>Flybys at KMIT (Shafter, CA) on a nice pink sunset day</p>
