--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/#">
-            <img id="logo" alt="logo" src="{{ url_for('static', filename='images/icon_transparent.png') }}" width="45" height="45">
+            <img id="logo" alt="logo" src="{{ url_for('static', filename='images/icon_transparent.png') }}" width="45"
+                height="45">
             Coconut Barometer
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
