--- a/templates/awc.html
+++ b/templates/awc.html
@@ -15,13 +15,16 @@
                 <option value="temp_c">Temperature</option>
                 <option value="dewpoint_c">Dewpoint</option>
                 <option value="altim_in_hg">Altimeter</option>
+                <option value="seal_level_pressure_mb">Seal-level Pressure</option>
                 <option value="wind_dir_degrees">Wind Direction</option>
                 <option value="wind_speed_kt">Wind Speed</option>
                 <option value="wind_gust_kt">Wind Gust</option>
                 <option value="visibility_statute_mi">Visibility</option>
+                <option value="vert_vis_ft">Vertical Visibility</option>
                 <option value="cloud_base_ft_agl_0">Cloud Base AGL</option>
                 <option value="sky_cover_0">Sky Cover</option>
                 <option value="precip_in">Precip</option>
+                <option value="three_hr_pressure_tendency_mb">Pressure Tendency</option>
                 <option value="elevation_m">Elevation</option>
             </select>
         </div>
