edits to scheduler

--- a/templates/awc.html
+++ b/templates/awc.html
@@ -26,6 +26,7 @@
                 <option value="precip_in">Precip</option>
                 <option value="three_hr_pressure_tendency_mb">Pressure Tendency</option>
                 <option value="elevation_m">Elevation</option>
+                <option value="age">Age</option>
             </select>
         </div>
     </div>
