--- a/templates/awc.html
+++ b/templates/awc.html
@@ -14,6 +14,7 @@
                 <option value="flight_category">Flight Category</option>
                 <option value="temp_c">Temperature</option>
                 <option value="dewpoint_c">Dewpoint</option>
+                <option value="temp_dewpoint_spread">Temp-Dewpoint Spread</option>
                 <option value="altim_in_hg">Altimeter</option>
                 <option value="seal_level_pressure_mb">Seal-level Pressure</option>
                 <option value="wind_dir_degrees">Wind Direction</option>
