--- a/templates/aprs.html
+++ b/templates/aprs.html
@@ -77,6 +77,30 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="table-responsive-sm">
+                <table class="table table-hover table-sm" id="packets">
+                    <thead>
+                        <tr>
+                            <th scope="col">Timestamp</th>
+                            <th scope="col">Latitude</th>
+                            <th scope="col">Longitude</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in rows %}
+                        <tr>
+                            <td>{{ row['timestamp_'] }}</td>
+                            <td>{{ row['latitude'] }}</td>
+                            <td>{{ row['longitude'] }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     <div id="log-event"></div>
     <div id="log-layout"></div>
 </div>
