--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -102,10 +102,10 @@
                             <td>{{ row['to'] }}</td>
                             <td>{{ row['latitude'] }}</td>
                             <td>{{ row['longitude'] }}</td>
-                            <td>{{ row['speed'] }}</td>
+                            <!-- <td>{{ row['speed'] }}</td>
                             <td>{{ row['altitude'] }}</td>
                             <td>{{ row['course'] }}</td>
-                            <!-- <td>{{ row['raw'] }}</td> -->
+                            <td>{{ row['raw'] }}</td> -->
                         </tr>
                         {% endfor %}
                     </tbody>
