--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #f0ffff;">
         <a class="navbar-brand" href="/#">
             <img id="logo" alt="logo" src="{{ url_for('static', filename='images/icon_transparent.png') }}" width="45"
                 height="45">
@@ -73,7 +73,7 @@
                 <a class="nav-link" href="/oilgas">Oil & Gas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/test">Test</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
             </ul>
         </div>
@@ -83,11 +83,11 @@
 </body>
 
 <!-- Footer -->
-<footer class="footer fixed-bottom">
+<footer class="footer fixed-bottom" style="background-color:#f0ffff">
     <div class="container">
         <span class="text-muted">
-            <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a href=""> Adam Reeder</a>
+            <div class="footer-copyright text-center py-3">© 2019 Copyright
+                <a href="/about"> Adam Reeder</a>
             </div>
         </span>
     </div>
