--- a/web-app/templates/wx.html
+++ b/web-app/templates/wx.html
@@ -15,6 +15,8 @@
         <option value="t_500">500</option>
         <option value="t_1000">1000</option>
         <option value="t_5000">5000</option>
+        <option value="t_10000">10000</option>
+        <option value="t_50000">50000</option>
       </select>
     </div>
   </div>
