--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -42,7 +42,7 @@
             <div class="chart" id="map_aprs">
                 <script>
                     var graphs = {{ map_aprs | safe}};
-                    Plotly.plot('map_aprs', graphs, {});
+                    Plotly.plot('map_aprs', graphs.data, graphs.layout, {displayModeBar: false});
                 </script>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="chart" id="plot_speed">
                 <script>
                     var graphs = {{ plot_speed | safe}};
-                    Plotly.plot('plot_speed', graphs, {});
+                    Plotly.plot('plot_speed', graphs.data, graphs.layout, {displayModeBar: false});
                 </script>
             </div>
         </div>
@@ -62,7 +62,7 @@
             <div class="chart" id="plot_alt">
                 <script>
                     var graphs = {{ plot_alt | safe}};
-                    Plotly.plot('plot_alt', graphs, {});
+                    Plotly.plot('plot_alt', graphs.data, graphs.layout, {displayModeBar: false});
                 </script>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="chart" id="plot_course">
                 <script>
                     var graphs = {{ plot_course | safe}};
-                    Plotly.plot('plot_course', graphs, {});
+                    Plotly.plot('plot_course', graphs.data, graphs.layout, {displayModeBar: false});
                 </script>
             </div>
         </div>
